--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.3.33"
   }
 }
